add result component

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,13 +6,13 @@
 
 #app {
   height: 100vh;
-  background-color: #fcfcfc;
+  background-color: #fff;
 }
 
-#search {
-  height: 40%;
+#search{
+  height: 30%;
 }
 
 #result{
-    height: 60%;
+height: 70%;
 }
