--- a/src/style/Result.scss
+++ b/src/style/Result.scss
@@ -4,7 +4,12 @@ $color-azure: #3a86ff;
   font-family: 'Lato', sans-serif;
   display: flex;
   justify-content: center;
-  padding-top: 10em;
+  align-items: center;
+
+  #notFound {
+    color: $color-azure;
+    font-size: 3em;
+  }
 
   #wrapper {
     color: #fff;
@@ -12,7 +17,6 @@ $color-azure: #3a86ff;
     width: fit-content;
     height: fit-content;
     padding: 2em 4em;
-    scale: 1.5;
     box-shadow: 0px 0px 30px 10px gray;
     p#name {
       text-align: left;
@@ -31,9 +35,33 @@ $color-azure: #3a86ff;
         cursor: pointer;
       }
     }
-    p#desc{
-        text-transform: capitalize;
-        font-size: 1.4em;
+    p#desc {
+      text-transform: capitalize;
+      font-size: 1.4em;
+    }
+  }
+
+  .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .loader {
+      border: 16px solid #f3f3f3; /* Light grey */
+      border-top: 16px solid #3498db; /* Blue */
+      border-radius: 50%;
+      width: 5em;
+      height: 5em;
+      animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
     }
   }
 }
